<?xml version="1.0"?>
<!-- Copied and adapted from diff_drive_controller (https://github.com/ros-controls/ros2_controllers) -->
<package format="3">
  <name>mecanum_drive_controller</name>
  <version>1.0.0</version>

  <description>Controller for a mecanum drive mobile base.</description>
  <license>Apache License 2.0</license>

  <author email="maciej.stepien@husarion.com">Maciej Stępień</author>
  <author email="bence.magyar.robotics@gmail.com">Bence Magyar</author>
  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>
  
  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
