<?xml version="1.0"?>
<!-- Copied and adapted from diff_drive_controller (https://github.com/ros-controls/ros2_controllers) -->
<package format="3">
  <name>mecanum_drive_controller</name>
 <version>1.0.0</version>

  <description>Controller for a mecanum drive mobile base.</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther-navigation</url>
  <url type="bugtracker">https://github.com/husarion/panther-navigation/issues</url>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <author email="maciej.stepien@husarion.com">Maciej Stępień</author>
  <author email="bence.magyar.robotics@gmail.com">Bence Magyar</author>
  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>generate_parameter_library</build_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
