<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>twist_mux_controller</name>
  <version>0.0.1</version>
  <description>Controller for managing multiple twist inputs</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com</url>
  <url type="repository">https://github.com/husarion/husarion_controllers</url>
  <url type="bugtracker">https://github.com/husarion/husarion_controllers/issues</url>

  <author email="dawid.kmak@husarion.com">Dawid Kmak</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
